--- a/templates/add_coupon.html
+++ b/templates/add_coupon.html
@@ -78,6 +78,11 @@
                         </div>
                         
                         <div class="mb-4">
+                            <label for="code" class="form-label">Description:</label>
+                            {{ form.description }}
+                        </div>
+                        
+                        <div class="mb-4">
                             <label for="discount_percentage" class="form-label">Discount Percentage:</label>
                             {{ form.discount_percentage }}
                         </div>
