--- a/templates/add_test.html
+++ b/templates/add_test.html
@@ -78,13 +78,25 @@
                         </div>
                         
                         <div class="mb-4">
-                            <label for="degree" class="form-label">Price:</label>
-                            {{ form.price }}
+                            <label for="name" class="form-label">B2B Min Price:</label>
+                            {{ form.b2b_min_price }}
+                        </div>
+                        
+
+                        <div class="mb-4">
+                            <label for="name" class="form-label">B2B Max Price:</label>
+                            {{ form.b2b_max_price }}
+                        </div>
+                        
+
+                        <div class="mb-4">
+                            <label for="name" class="form-label">Mrp:</label>
+                            {{ form.mrp }}
                         </div>
                         
                         <div class="mb-4">
-                            <label for="degree" class="form-label">Remark:</label>
-                            {{ form.remark }}
+                            <label for="degree" class="form-label">Description:</label>
+                            {{ form.description }}
                         </div>
                         
                                 <!-- Category Description Section -->
