--- a/templates/partials/left-sidebar.html
+++ b/templates/partials/left-sidebar.html
@@ -136,6 +136,34 @@
                                 </ul>
                             </li>
                         <li>
+                            
+                        <li>
+                            <li>
+                                <a href="javascript: void(0);" class="has-arrow">
+                                    <i data-feather="layers"></i>
+                                    <span data-key="t-authentication">Pharmacy</span>
+                                </a>
+                                <ul class="sub-menu" aria-expanded="false">
+                                    <li><a href="{% url 'add_pharmacy' %}">Add Pharmacy</a></li>
+                                    <li><a href="{% url 'list_pharmacy' %}">Pharmacy List</a></li>
+                                </ul>
+                            </li>
+                        <li>
+
+
+                        <li>
+                            <li>
+                                <a href="javascript: void(0);" class="has-arrow">
+                                    <i data-feather="layers"></i>
+                                    <span data-key="t-authentication">Order</span>
+                                </a>
+                                <ul class="sub-menu" aria-expanded="false">
+                                    <li><a href="{% url 'add_order' %}">Add Order</a></li>
+                                    <li><a href="{% url 'list_order' 'test' %}">Order Test List</a></li>
+                                    <li><a href="{% url 'list_order' 'medicine' %}">Order Medicine List</a></li>
+                                </ul>
+                            </li>
+                        <li>
 
 
                         
