--- a/templates/list_lab.html
+++ b/templates/list_lab.html
@@ -108,6 +108,8 @@
                                             <tr>
                                                 <th>#</th>
                                                 <th>Name</th>
+                                                <th>Email</th>
+                                                <th>Lab Name</th>
                                                 <th>Remark</th>
                                                 <th>Action</th>
                                             </tr>
@@ -118,6 +120,8 @@
                                                 <tr>
                                                     <td>{{ forloop.counter }}</td>
                                                     <td>{{ i.name }}</td>
+                                                    <td>{{ i.email }}</td>
+                                                    <td>{{ i.lab_name }}</td>
                                                     <td>{{ i.remark }}</td>
                                                   
                                                     <td>
