--- a/templates/order/list_order.html
+++ b/templates/order/list_order.html
@@ -127,7 +127,7 @@
                                                     <td>{{ forloop.counter }}</td>
                                                     <td>{{ i.user }}</td>
                                                     <td>{{ i.get_type_display }}</td>
-                                                    <td>{{ i.test.name|default:"-" }}</td>
+                                                    <td>{{ i.lab_test.test.name|default:"-" }}</td>
                                                     <td>{{ i.medicine.name|default:"-" }}</td>
                                                     <td>{{ i.labbotomist|default:"-" }}</td>
                                                     <td>{{ i.quantity }}</td>
