--- a/templates/order/update_order.html
+++ b/templates/order/update_order.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="mb-4">
                             <label for="test" class="form-label">Test:</label>
-                            {{ form.test }}
+                            {{ form.lab_test }}
                         </div>
                         <div class="mb-4">
                             <label for="medicine" class="form-label">Medicine:</label>
