--- a/templates/partials/left-sidebar.html
+++ b/templates/partials/left-sidebar.html
@@ -49,6 +49,18 @@
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow">
                                     <i data-feather="layers"></i>
+                                    <span data-key="t-authentication">Customer</span>
+                                </a>
+                                <ul class="sub-menu" aria-expanded="false">
+                                    <li><a href="{% url 'list_customers' %}">Customer List</a></li>
+                                </ul>
+                            </li>
+                        <li>
+
+                        <li>
+                            <li>
+                                <a href="javascript: void(0);" class="has-arrow">
+                                    <i data-feather="layers"></i>
                                     <span data-key="t-authentication">Lab</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
