--- a/templates/pharmacy/list_pharmacy.html
+++ b/templates/pharmacy/list_pharmacy.html
@@ -30,8 +30,7 @@
                                         <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>Owner Full Name</th>
-                                            <th>Owner Full Name</th>
+                                            <th>Email</th>
                                             <th>Owner Full Name</th>
                                             <th>Pharmacy Name</th>
                                             <th>Mobile No</th>
@@ -44,8 +43,7 @@
                                         {% for lab in data %}
                                             <tr>
                                                 <td>{{ forloop.counter }}</td>
-                                                <td>{{ lab.owner_full_name }}</td>
-                                                <td>{{ lab.owner_full_name }}</td>
+                                                <td>{{ lab.email }}</td>
                                                 <td>{{ lab.owner_full_name }}</td>
                                                 <td>{{ lab.pharmacy_name }}</td>
                                                 <td>{{ lab.mobile_no }}</td>
