--- a/templates/pharmacy/add_pharmacy.html
+++ b/templates/pharmacy/add_pharmacy.html
@@ -22,8 +22,8 @@
                                 <form method="post">
                                     {% csrf_token %}
                                     <div class="mb-3">
-                                        <label class="form-label">Username</label>
-                                        {{ form.username }}
+                                        <label class="form-label">Email</label>
+                                        {{ form.email }}
                                     </div>
                                     <div class="mb-3">
                                         <label class="form-label">Password</label>
