--- a/templates/add_test.html
+++ b/templates/add_test.html
@@ -76,6 +76,11 @@
                             <label for="name" class="form-label">Name:</label>
                             {{ form.name }}
                         </div>
+
+                        <div class="mb-4">
+                            <label for="name" class="form-label">Category:</label>
+                            {{ form.category }}
+                        </div>
                         
                         <div class="mb-4">
                             <label for="name" class="form-label">B2B Min Price:</label>
