--- a/templates/list_test.html
+++ b/templates/list_test.html
@@ -108,6 +108,7 @@
                                             <tr>
                                                 <th>#</th>
                                                 <th>Name</th>
+                                                <th>Category</th>
                                                 <th>B2B Min Price</th>
                                                 <th>B2B Max Price</th>
                                                 <th>MRP</th>
@@ -121,6 +122,7 @@
                                                 <tr>
                                                     <td>{{ forloop.counter }}</td>
                                                     <td>{{ i.name }}</td>
+                                                    <td>{{ i.category }}</td>
                                                     <td>{{ i.b2b_min_price }}</td>
                                                     <td>{{ i.b2b_max_price }}</td>
                                                     <td>{{ i.mrp }}</td>
