--- a/templates/partials/left-sidebar.html
+++ b/templates/partials/left-sidebar.html
@@ -87,6 +87,19 @@
                             <li>
                                 <a href="javascript: void(0);" class="has-arrow">
                                     <i data-feather="layers"></i>
+                                    <span data-key="t-authentication">Test Category</span>
+                                </a>
+                                <ul class="sub-menu" aria-expanded="false">
+                                    <li><a href="{% url 'add_test_category' %}">Add Test Category</a></li>
+                                    <li><a href="{% url 'list_test_category' %}">Test Category List</a></li>
+                                </ul>
+                            </li>
+                        <li>
+
+                        <li>
+                            <li>
+                                <a href="javascript: void(0);" class="has-arrow">
+                                    <i data-feather="layers"></i>
                                     <span data-key="t-authentication">Medicine Category</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
