--- a/templates/add_lab.html
+++ b/templates/add_lab.html
@@ -94,6 +94,11 @@
                             <label for="name" class="form-label">Lab Name:</label>
                             {{ form.lab_name }}
                         </div>
+                    
+                        <div class="mb-4">
+                            <label for="name" class="form-label">Mobile No:</label>
+                            {{ form.mobile_no }}
+                        </div>
                         
                         
                         <div class="mb-4">
