--- a/templates/list_coupon.html
+++ b/templates/list_coupon.html
@@ -90,7 +90,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="page-title-box d-sm-flex align-items-center justify-content-between">
-                            <h4 class="mb-sm-0 font-size-18">List Labs</h4>
+                            <h4 class="mb-sm-0 font-size-18">List Coupons</h4>
                         </div>
                     </div>
                 </div>
@@ -107,7 +107,8 @@
                                             <thead>
                                                 <tr>
                                                     <th>#</th>
-                                                    <th>Code</th>
+                                                    <th>Code</th> 
+                                                    <th>Title</th> 
                                                     <th>Description</th>
                                                     <th>Discount (%)</th>
                                                     <th>Discount Amount</th>
@@ -125,6 +126,7 @@
                                                         <tr>
                                                             <td>{{ forloop.counter }}</td>
                                                             <td>{{ i.code }}</td>
+                                                            <td>{{ i.title }}</td>
                                                             <td>{{ i.description }}</td>
                                                             <td>{{ i.discount_percentage|default:"-" }}%</td>
                                                             <td>₹{{ i.discount_amount|default:"-" }}</td>
