--- a/templates/list_testimonials.html
+++ b/templates/list_testimonials.html
@@ -108,6 +108,8 @@
                                                 <tr>
                                                     <th>#</th>
                                                     <th>Name</th>
+                                                    <th>Rating</th>
+                                                    <th>Date</th>
                                                     <th>Description</th>
                                                     <th>Action</th>
                                                 </tr>
@@ -118,6 +120,8 @@
                                                         <tr>
                                                             <td>{{ forloop.counter }}</td>
                                                             <td>{{ i.name }}</td>
+                                                            <td>{{ i.rating }}</td>
+                                                            <td>{{ i.created_at }}</td>
                                                             <td>{{ i.description }}</td>
                                                             
                                                     <td>
